<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundApp"
    tools:context=".DrawPlace">

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/list_of_frames"
        android:layout_width="379dp"
        android:layout_height="69dp"
        android:layout_marginEnd="32dp"
        android:layout_marginBottom="12dp"
        android:contentDescription="@string/app_name"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/addFrame"
        tools:listitem="@layout/frame" />

    <com.example.animationproject.PaintView
        android:id="@+id/paint_view2"
        android:layout_width="635dp"
        android:layout_height="280dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="44dp"
        app:layout_constraintBottom_toTopOf="@+id/list_of_frames"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="72dp"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageButton
            android:id="@+id/brush"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/brush"
            android:onClick="onClickBrush"
            app:layout_constraintBottom_toTopOf="@+id/eraser"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_penbutton" />

        <ImageButton
            android:id="@+id/eraser"
            android:layout_width="71dp"
            android:layout_height="56dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/eraser"
            android:onClick="onClickEraser"
            app:layout_constraintBottom_toTopOf="@+id/back"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_erasebutton" />

        <ImageButton
            android:id="@+id/back"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/back"
            android:onClick="onClickBack"
            app:layout_constraintBottom_toTopOf="@+id/forward"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_backbutton" />

        <ImageButton
            android:id="@+id/forward"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/forward"
            android:onClick="onClickForward"
            app:layout_constraintBottom_toTopOf="@+id/delete"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_forwardbutton" />

        <ImageButton
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginBottom="64dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/delete"
            android:onClick="onClickDelete"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_clearbutton" />

        <ImageButton
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="#00FFFFFF"
            android:contentDescription="@string/save"
            android:onClick="onClickSaveGIF"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/delete"
            app:srcCompat="@drawable/ic_savebutton" />

        <ImageButton
            android:id="@+id/backToMenu"
            android:layout_width="54dp"
            android:layout_height="56dp"
            android:layout_marginBottom="8dp"
            android:background="@drawable/empty_pic"
            android:onClick="onClickExit"
            android:rotation="180"
            app:layout_constraintBottom_toTopOf="@+id/brush"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:srcCompat="@drawable/ic_exitappbutton" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ImageView
        android:id="@+id/canvas_preview"
        android:layout_width="127dp"
        android:layout_height="56dp"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="12dp"
        android:background="@color/white"
        android:contentDescription="@string/eraser"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/list_of_frames"
        app:srcCompat="@drawable/empty_pic"
        tools:ignore="TouchTargetSizeCheck" />

    <ImageView
        android:id="@+id/addFrame"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20dp"
        android:layout_marginBottom="20dp"
        android:onClick="onClickAddFrame"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:srcCompat="@drawable/ic_addframebutton" />

    <SeekBar
        android:id="@+id/brush_size"
        android:layout_width="301dp"
        android:layout_height="26dp"
        android:layout_marginEnd="548dp"
        android:progressDrawable="@drawable/custom_seekbar"
        android:rotation="270"
        android:thumbTint="@color/orange"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/paint_view2"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.6" />

    <ImageButton
        android:id="@+id/color_preview"
        android:layout_width="59dp"
        android:layout_height="51dp"
        android:layout_marginStart="4dp"
        android:layout_marginTop="16dp"
        android:background="@color/black"
        android:contentDescription="@string/color_preview"
        android:onClick="onClickPickColor"
        app:layout_constraintStart_toEndOf="@+id/constraintLayout"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/forStart"
        android:layout_width="593dp"
        android:layout_height="245dp"
        android:layout_marginTop="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.488"
        app:layout_constraintStart_toStartOf="@+id/paint_view2"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_paintstart" />


</androidx.constraintlayout.widget.ConstraintLayout>